一些全新的css样式

--- a/lounge/lounge.html
+++ b/lounge/lounge.html
@@ -54,7 +54,8 @@
       come and join us anytime.
     </p>
 
-    <h2>Weekly Elixir Specials</h2>
+    <div class="elixirs">
+      <h2>Weekly Elixir Specials</h2>
     <p>
       <img src="images/yellow.gif" alt="Lemon Breeze Elixir">
     </p>
@@ -70,6 +71,7 @@
     <p>
       <img src="images/chai.gif" alt="Chai Chiller Elixir">
     </p>
+
     <h3>Chai Chiller</h3>
     <p>
       Not your traditional chai, this elixir mixes mat&eacute;
@@ -80,6 +82,7 @@
     <p>
       <img src="images/black.gif" alt="Black Brain Brew Elixir">
     </p>
+
     <h3>Black Brain Brew</h3>
     <p>
       Want to boost your memory?  Try our Black Brain Brew
@@ -93,6 +96,7 @@
       <a href="beverages/elixir.html" 
          title="Head First Lounge Elixirs">elixirs</a>.
     </p>
+    </div>
 
     <h2>What's playing at the Lounge</h2>
     <p>
