--- a/ABC.html
+++ b/ABC.html
@@ -5,8 +5,7 @@
   <title>Document</title>
 </head>
 <body>
-  <P>ABC</P>
-  <P>DEF</P>
-  <p>GFI</p>
+  <div>1233</div>
+  <dic>qwe</dic>
 </body>
 </html>
